--- a/index.html
+++ b/index.html
@@ -1,10 +1,104 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>title</title>
-  </head>
-  <body>
-  asd
-  </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Esoteric</title>
+    <meta name="description" content="Esoteric is an indie card game where the goal is to put on the best firework display">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+    <link rel="stylesheet" href="assets/css/untitled.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom">
+        <div class="container"><a class="navbar-brand" href="#">Esoteric</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Blog</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link">Itch Io</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="masthead text-center text-white">
+        <div class="masthead-content">
+            <div class="container">
+                <h1 class="masthead-heading mb-0">Esoteric</h1>
+                <h2 class="masthead-subheading mb-0">The card game for you and your friends</h2><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="#game">Learn More</a></div>
+        </div>
+        <div class="bg-circle-1 bg-circle"></div>
+        <div class="bg-circle-2 bg-circle"></div>
+        <div class="bg-circle-3 bg-circle"></div>
+        <div class="bg-circle-4 bg-circle"></div>
+    </header>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col">
+                    <div class="p-5"><a id="game"></a>
+                        <h2 class="text-center display-4">The Game</h2>
+                        <p class="text-center">Esoteric is a card game designed by Jesse and the story/aim of the game is to provide a better firework show than the neighbouring town even though you both have the same resources.&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col">
+                    <div class="p-5">
+                        <h2 class="text-center display-4">Alex (kaller)</h2>
+                        <p class="text-center">Alex is the developer of the game and came on board initally to make a prototype but ended up staying on to finish the project. His social links are:&nbsp;<br><a href="https://twitter.com/kallerdaller" target="_blank">Twitter</a><br>
+                            <a
+                                href="https://twitch.tv/kallerdaller" target="_blank">Twitch</a><br><a href="https://www.youtube.com/channel/UC_6HWI42nyiCuECVDs5jvoQ?view_as=subscriber" target="_blank">YouTube</a><br><a href="https://portfolio.kaller.xyz" target="_blank">Portfolio</a><br></p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-5">
+                        <h2 class="text-center display-4">Jesse</h2>
+                        <p class="text-center">Jesse is the sole designer behind the game</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-1">
+                    <div class="border rounded-circle p-5" style="background-color: #fa5c5c;"><img class="img-fluid" src="https://static.itch.io/images/itchio-textless-white.svg" width="100%" height="100%"></div>
+                </div>
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <h2 class="display-4">itch.io</h2>
+                        <p>itch.io is where we plan on releasing the game. It will be a great platform for the game and we will update you with a link as soon as we have the game up.<br>There is not currently a price tag on the game.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="rounded-circle img-fluid" src="https://uploads-ssl.webflow.com/5c14e387dab576fe667689cf/5ca5bf1dff3c03fbf7cc9b3c_Kofi_logo_RGB_rounded-p-500.png"></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Ko-Fi</h2>
+                        <p>Ko-Fi is a way to give small donations to people. Any donations received via here will buy me a coffee. This donation is split between the team and is in no way obligatory.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="py-5 bg-black">
+        <div class="container">
+            <p class="text-center text-white m-0 small">Copyright&nbsp;© Alex Darley 2020</p>
+        </div>
+    </footer>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+</body>
+
 </html>
