--- a/download.html
+++ b/download.html
@@ -27,7 +27,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container">
-                <h1 class="masthead-heading mb-0">V0.1.1 Download</h1><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="files/Esoteric.zip">Download</a></div>
+                <h1 class="masthead-heading mb-0">V0.1.2 Download</h1><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="files/Esoteric_v.0.1.1.2.zip" download>Download</a></div>
         </div>
         <div class="bg-circle-1 bg-circle"></div>
         <div class="bg-circle-2 bg-circle"></div>
