--- a/index.html
+++ b/index.html
@@ -40,22 +40,23 @@
                 <div class="col">
                     <div class="p-5"><a id="game"></a>
                         <h2 class="text-center display-4">The Game</h2>
-                        <p class="text-center">Esoteric is a card game designed by Jesse and the story/aim of the game is to provide a better firework show than the neighbouring town even though you both have the same resources.&nbsp;</p>
+                        <p class="text-center">Esoteric is a two player strategic card game about an intense resource competition between two cities, <br>in their attempt to make the perfect fireworks display. <br>Both players have access to the same options of play and therefore
+                            the game is decided on skillful plays and outwitting your opponent.<br><br><br>Matches take less than five minutes to complete and the game has a very easy learning curve, with difficulty in mastery.<br></p>
                     </div>
                 </div>
             </div>
             <div class="row align-items-center">
                 <div class="col">
                     <div class="p-5">
-                        <h2 class="text-center display-4">Alex (kaller)</h2>
+                        <h2 class="text-center display-4">Alex A.K.A<br>kaller</h2>
                         <p class="text-center">Alex is the developer of the game and came on board initally to make a prototype but ended up staying on to finish the project. His social links are:&nbsp;<br><a href="https://twitter.com/kallerdaller" target="_blank">Twitter</a><br>
                             <a
-                                href="https://twitch.tv/kallerdaller" target="_blank">Twitch</a><br><a href="https://www.youtube.com/channel/UC_6HWI42nyiCuECVDs5jvoQ?view_as=subscriber" target="_blank">YouTube</a><br><a href="https://portfolio.kaller.xyz" target="_blank">Portfolio</a><br></p>
+                                href="https://twitch.tv/kallerdaller" target="_blank">Twitch</a><br><a href="https://www.youtube.com/channel/UC_6HWI42nyiCuECVDs5jvoQ?view_as=subscriber" target="_blank">YouTube</a><br><a href="https://portfolio.kaller.xyz" target="_blank">Portfolio</a><br>Discord: kaller#2653</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="p-5">
-                        <h2 class="text-center display-4">Jesse</h2>
+                        <h2 class="text-center display-4">Jesse A.K.A<br>The_Ecliptican<br></h2>
                         <p class="text-center">Jesse is the sole designer behind the game</p>
                     </div>
                 </div>
@@ -86,8 +87,9 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Ko-Fi</h2>
-                        <p>Ko-Fi is a way to give small donations to people. Any donations received via here will buy me a coffee. This donation is split between the team and is in no way obligatory.</p>
-                    </div>
+                        <p><a href="https://ko-fi.com/kallerdaller" target="_blank">Ko-Fi</a>&nbsp;is a way to give small donations to people. Any donations received via here will buy me a coffee. This donation is split between the team and is in no way
+                            obligatory.</p><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#6afffa', 'V7V4L5V7');kofiwidget2.draw();</script> 
+</div>
                 </div>
             </div>
         </div>
