change team desc

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
             <div class="row align-items-center">
                 <div class="col">
                     <div class="p-5">
-                        <h2 class="text-center display-4">Alex A.K.A<br>kaller</h2>
-                        <p class="text-center">Alex is the developer of the game and came on board initally to make a prototype but ended up staying on to finish the project. His social links are:&nbsp;<br><a href="https://twitter.com/kallerdaller" target="_blank">Twitter</a><br>
+                        <h2 class="text-center display-4">kaller</h2>
+                        <p class="text-center">kaller is the developer of the game and came on board initally to make a prototype but ended up staying on to finish the project. His social links are:&nbsp;<br><a href="https://twitter.com/kallerdaller" target="_blank">Twitter</a><br>
                             <a
                                 href="https://twitch.tv/kallerdaller" target="_blank">Twitch</a><br><a href="https://www.youtube.com/channel/UC_6HWI42nyiCuECVDs5jvoQ?view_as=subscriber" target="_blank">YouTube</a><br><a href="https://portfolio.kaller.xyz" target="_blank">Portfolio</a><br>Discord: kaller#2653</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="p-5">
-                        <h2 class="text-center display-4">Jesse A.K.A<br>The_Ecliptican<br></h2>
-                        <p class="text-center">Jesse is the sole designer behind the game</p>
+                        <h2 class="text-center display-4">The_Ecliptican<br></h2>
+                        <p class="text-center">The_Ecliptican is the sole designer behind the game.<br>Their socials are:<br><a href="https://www.youtube.com/channel/UCTXQ5iNc7GCPg1WJI_ZroJw/" target="_blank">YouTube</a></p>
                     </div>
                 </div>
             </div>
