--- a/download.html
+++ b/download.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Esoteric</title>
-    <meta name="description" content="Esoteric is an indie card game where the goal is to put on the best firework display">
+    <meta name="description" content="Esoteric is a two player strategic card game about an intense resource competition between two cities, in their attempt to make the perfect fireworks display">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
@@ -27,7 +27,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container">
-                <h1 class="masthead-heading mb-0">V0.1.1.3 Download</h1><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="files/Esoteric_v.0.1.1.3.zip" download>Download</a></div>
+                <h1 class="masthead-heading mb-0">v0.1.1.3 Download</h1><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="files/Esoteric_v0.1.1.3.zip" download>Download</a></div>
         </div>
         <div class="bg-circle-1 bg-circle"></div>
         <div class="bg-circle-2 bg-circle"></div>
