--- a/index.html
+++ b/index.html
@@ -66,13 +66,28 @@
     <section>
         <div class="container">
             <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="border rounded-circle p-5" style="background-color: #7289DA;"><img class="img-fluid" src="assets/img/Discord-Logo-White.png" width="100%" height="100%"></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Discord</h2>
+                        <p>The Discord is a place where you can talk to the devs, report issues, get involved with the community, find people to play against and suggest ideas<br><a href="https://discord.gg/vXtm4gN" target="_blank">Invite Link</a></p><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#6afffa', 'V7V4L5V7');kofiwidget2.draw();</script> 
+</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-1">
                     <div class="border rounded-circle p-5" style="background-color: #fa5c5c;"><img class="img-fluid" src="https://static.itch.io/images/itchio-textless-white.svg" width="100%" height="100%"></div>
                 </div>
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
                         <h2 class="display-4">itch.io</h2>
-                        <p>itch.io is where we plan on releasing the game. It will be a great platform for the game and we will update you with a link as soon as we have the game up.<br>There is not currently a price tag on the game.</p>
+                        <p>itch.io is where we plan on releasing the game. It will be a great platform for the game and we will update you with a link as soon as we have the game up.<br>The game will be free for all.</p>
                     </div>
                 </div>
             </div>
