remove ko-fi link from discord section

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Discord</h2>
-                        <p>The Discord is a place where you can talk to the devs, report issues, get involved with the community, find people to play against and suggest ideas<br><a href="https://discord.gg/vXtm4gN" target="_blank">Invite Link</a></p><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#6afffa', 'V7V4L5V7');kofiwidget2.draw();</script> 
-</div>
+                        <p>The Discord is a place where you can talk to the devs, report issues, get involved with the community, find people to play against and suggest ideas<br><a href="https://discord.gg/vXtm4gN" target="_blank">Invite Link</a></p>
+                    </div>
                 </div>
             </div>
         </div>
