--- a/download.html
+++ b/download.html
@@ -27,11 +27,16 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container">
-                <h1 class="masthead-heading mb-0">v0.1.1.3 Download</h1><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="files/Esoteric_v0.1.1.3.zip" download>Download</a></div>
+                <h1 class="masthead-heading mb-0">v0.1.1.4 Download</h1><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="files/Esoteric_v0.1.1.4.zip" download>Download</a></div>
         </div>
         <div class="bg-circle-1 bg-circle"></div>
         <div class="bg-circle-2 bg-circle"></div>
         <div class="bg-circle-3 bg-circle"></div>
         <div class="bg-circle-4 bg-circle"></div>
     </header>
+	<h2>History</h2>
+	<ul>
+<li><a href='files / Esoteric_v0.1.1.3.zip'>v0.1.1.3</a></li>
+		<li><a href="files/Esoteric_v0.1.1.1.zip">v0.1.1.1</a></li>
+	</ul>
 </body>
