--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+    <link rel="stylesheet" href="assets/css/A-Blog-Page.css">
+    <link rel="stylesheet" href="assets/css/Parallax-Scroll-Effect.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom">
-        <div class="container"><a class="navbar-brand" href="#">Esoteric</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top navbar-custom">
+        <div class="container-fluid"><a class="navbar-brand" href="#">Esoteric</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Blog</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="blog.html">Blog</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link">Itch Io</a></li>
                 </ul>
             </div>
@@ -25,7 +27,7 @@
     </nav>
     <header class="masthead text-center text-white">
         <div class="masthead-content">
-            <div class="container">
+            <div class="container-fluid">
                 <h1 class="masthead-heading mb-0">Esoteric</h1>
                 <h2 class="masthead-subheading mb-0">The card game for you and your friends</h2><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="#game">Learn More</a></div>
         </div>
@@ -110,7 +112,7 @@
         </div>
     </section>
     <footer class="py-5 bg-black">
-        <div class="container">
+        <div class="container-fluid">
             <p class="text-center text-white m-0 small">Copyright&nbsp;© Alex Darley 2020</p>
         </div>
     </footer>
