--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
                         <h2 class="display-4">itch.io</h2>
-                        <p>itch.io is where we plan on releasing the game. It will be a great platform for the game and we will update you with a link as soon as we have the game up.<br>The game will be free for all.</p>
-                    </div>
+                        <p>itch.io is where we plan on releasing the game. It will be a great platform for the game and we will update you with a link as soon as we have the game up.<br>The game will be free for all.</p><iframe src="https://itch.io/embed/676572" height="167" width="552" frameborder="0"><a href="https://kallerdaller.itch.io/esoteric">Esoteric by kallerdaller</a></iframe></div>
                 </div>
             </div>
         </div>
