--- a/download.html
+++ b/download.html
@@ -27,7 +27,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container">
-                <h1 class="masthead-heading mb-0">v0.1.3.1 Download</h1><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="files/Esoteric_v0.1.3.1.zip" download>Download</a></div>
+                <h1 class="masthead-heading mb-0">v0.1.3.2 Download</h1><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="files/Esoteric_v0.1.3.2.zip" download>Download</a></div>
         </div>
         <div class="bg-circle-1 bg-circle"></div>
         <div class="bg-circle-2 bg-circle"></div>
@@ -36,6 +36,7 @@
     </header>
 	<h2>History</h2>
 	<ul>
+<li><a href='files / Esoteric_v0.1.3.1.zip'>v0.1.3.1</a></li>
 <li><a href='files / Esoteric_v0.1.3.0.zip'>v0.1.3.0</a></li>
 <li><a href='files / Esoteric_v0.1.2.1.zip'>v0.1.2.1</a></li>
 <li><a href='files / Esoteric_v0.1.2.0.zip'>v0.1.2.0</a></li>
