--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
     <header class="text-center masthead text-center text-white">
         <div class="masthead-content">
             <div class="container-fluid">
-                <h1 class="masthead-subheading mb-0">Esoteric</h1>
+                <h1 class="masthead-subheading mb-0">Skyline Secrets</h1>
                 <h2 class="masthead-subheading mb-0">The card game for you and your friends</h2><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="#game">Learn More</a></div>
         </div>
         <div class="bg-circle-1 bg-circle"></div>
