--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container-fluid">
-                <h1 class="masthead-heading mb-0">Esoteric</h1>
+                <h1 class="masthead-heading mb-0">Skyline Secrets</h1>
                 <h2 class="masthead-subheading mb-0">The card game for you and your friends</h2><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="#game">Learn More</a></div>
         </div>
         <div class="bg-circle-1 bg-circle"></div>
@@ -42,8 +42,8 @@
                 <div class="col">
                     <div class="p-5"><a id="game"></a>
                         <h2 class="text-center display-4">The Game</h2>
-                        <p class="text-center">Esoteric is a two player strategic card game about an intense resource competition between two cities, <br>in their attempt to make the perfect fireworks display. <br>Both players have access to the same options of play and therefore
-                            the game is decided on skillful plays and outwitting your opponent.<br><br><br>Matches take less than five minutes to complete and the game has a very easy learning curve, with difficulty in mastery.<br></p>
+                        <p class="text-center">Skyline Secrets is a two player strategic card game about an intense resource competition between two cities, <br>in their attempt to make the perfect fireworks display. <br>Both players have access to the same options of play
+                            and therefore the game is decided on skillful plays and outwitting your opponent.<br><br><br>Matches take less than five minutes to complete and the game has a very easy learning curve, with difficulty in mastery.<br></p>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
                         <h2 class="display-4">itch.io</h2>
-                        <p>itch.io is where we plan on releasing the game. It will be a great platform for the game and we will update you with a link as soon as we have the game up.<br>The game will be free for all.</p><iframe src="https://itch.io/embed/676572" height="167" width="552" frameborder="0"><a href="https://kallerdaller.itch.io/esoteric">Esoteric by kallerdaller</a></iframe></div>
+                        <p>itch.io is where we plan on releasing the game. It will be a great platform for the game and we will update you with a link as soon as we have the game up.<br>The game will be free for all.</p><iframe frameborder="0" src="https://itch.io/embed/676572?linkback=true&amp;border_width=2&amp;bg_color=6afffa&amp;fg_color=ee0979&amp;link_color=ee0979&amp;border_color=ee0979" width="554" height="169"><a href="https://kallerdaller.itch.io/skyline-secrets">Skyline Secrets by kallerdaller</a></iframe></div>
                 </div>
             </div>
         </div>
