--- a/download.html
+++ b/download.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Esoteric</title>
-    <meta name="description" content="Esoteric is a two player strategic card game about an intense resource competition between two cities, in their attempt to make the perfect fireworks display">
+    <title>Home - Skyline Secrets</title>
+    <meta name="description" content="Skyline Secrets is a two player strategic card game about an intense resource competition between two cities, in their attempt to make the perfect fireworks display">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
@@ -14,10 +14,10 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom">
-        <div class="container"><a class="navbar-brand" href="#">Esoteric</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="#">Skyline Secrets</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="http://esoteric.kaller.xyz">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="http://skyline-secrets.kaller.xyz">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Blog</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link">Itch Io</a></li>
                 </ul>
@@ -27,7 +27,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container">
-                <h1 class="masthead-heading mb-0">v0.1.4.0 Download</h1><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="files/Esoteric_v0.1.4.0.zip" download>Download</a></div>
+                <h1 class="masthead-heading mb-0">v0.1.5.0 Download</h1><a class="btn btn-info btn-xl rounded-pill mt-5" role="button" href="files/Skyline_Secrets_v0.1.5.0.zip" download>Download</a></div>
         </div>
         <div class="bg-circle-1 bg-circle"></div>
         <div class="bg-circle-2 bg-circle"></div>
@@ -36,6 +36,7 @@
     </header>
 	<h2>History</h2>
 	<ul>
+<li><a href='files / Esoteric_v0.1.4.0.zip'>v0.1.4.0</a></li>
 <li><a href='files / Esoteric_v0.1.3.2.zip'>v0.1.3.2</a></li>
 <li><a href='files / Esoteric_v0.1.3.1.zip'>v0.1.3.1</a></li>
 <li><a href='files / Esoteric_v0.1.3.0.zip'>v0.1.3.0</a></li>
