actual name upgrade

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Esoteric</title>
-    <meta name="description" content="Esoteric is an indie card game where the goal is to put on the best firework display">
+    <meta name="twitter:description" content="Skyline Secrets is an indie card game where the goal is to put on the best firework display">
+    <meta name="twitter:title" content="Skyline Secrets Game">
+    <meta property="og:image" content="assets/img/Background%20feature-01-01.png">
+    <meta name="description" content="Skyline Secrets is an indie card game where the goal is to put on the best firework display">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="icon" type="image/png" sizes="133x133" href="assets/img/32x32-01.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
@@ -16,7 +22,7 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top navbar-custom">
-        <div class="container-fluid"><a class="navbar-brand" href="#">Esoteric</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="#">Skyline Secrets</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="blog.html">Blog</a></li>
