--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link">Itch Io</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kallerdaller.itch.io/skyline-secrets">Itch Io</a></li>
                 </ul>
             </div>
         </div>
