--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <div class="row align-items-center">
                 <div class="col">
                     <div class="p-5">
-                        <h2 class="text-center display-4">kaller</h2>
-                        <p class="text-center">kaller is the developer of the game and came on board initally to make a prototype but ended up staying on to finish the project. His social links are:&nbsp;<br><a href="https://twitter.com/kallerdaller" target="_blank">Twitter</a><br>
+                        <h2 class="text-center display-4">Lonely Pie Studios</h2>
+                        <p class="text-center">Lonely Pie Studios are the developer of the game and came on board initally to make a prototype but ended up staying on to finish the project. Their social links are:&nbsp;<br><a href="https://twitter.com/LonelyPieStudios" target="_blank">Twitter</a><br>
                             <a
                                 href="https://twitch.tv/kallerdaller" target="_blank">Twitch</a><br><a href="https://www.youtube.com/channel/UC_6HWI42nyiCuECVDs5jvoQ?view_as=subscriber" target="_blank">YouTube</a><br><a href="https://portfolio.kaller.xyz" target="_blank">Portfolio</a><br>Discord: kaller#2653</p>
                     </div>
@@ -95,7 +95,7 @@
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
                         <h2 class="display-4">itch.io</h2>
-                        <p>itch.io is where we plan on releasing the game. It will be a great platform for the game and we will update you with a link as soon as we have the game up.<br>The game will be free for all.</p><iframe frameborder="0" src="https://itch.io/embed/676572?linkback=true&amp;border_width=2&amp;bg_color=6afffa&amp;fg_color=ee0979&amp;link_color=ee0979&amp;border_color=ee0979" width="554" height="169"><a href="https://kallerdaller.itch.io/skyline-secrets">Skyline Secrets by kallerdaller</a></iframe></div>
+                        <p>itch.io is the only platform the game has been released on. It is a great platform for the game where it is free to download.</p><iframe frameborder="0" src="https://itch.io/embed/676572?linkback=true&amp;bg_color=ee0979&amp;fg_color=FFF&amp;link_color=6afffa&amp;border_color=3fd4d0" width="552" height="167"><a href="https://lonelypiestudios.itch.io/skyline-secrets">Skyline Secrets by lonelypiestudios, The_Ecliptican</a></iframe></div>
                 </div>
             </div>
         </div>
